use axios cdn and require element in demand

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
+    <link href="https://cdn.bootcss.com/element-ui/2.3.3/theme-chalk/index.css" rel="stylesheet">
     <title>BreezyMelon Todos</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
   </body>
 </html>
