--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <title>BreezyMelon Todos</title>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <!--vue-ssr-outlet-->
     <script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
   </body>
 </html>
